# weather_api

./: Dockerfile  docker-compose.yml  pyproject.toml  readmy.md
app/: config.py  main.py
app/routers/: wheather_router.py
app/utils/: data_processing.py  parse_data.py
